Update echo-pipelinetriggers/src/main/java/com/netflix/spinnaker/echo/pipelinetriggers/eventhandlers/CDEventsWebhookHandler.java
Co-authored-by: Matt <6519811+mattgogerly@users.noreply.github.com>